--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^1.0.17",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
