--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-image-compression": "^1.0.17",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^6.0.2",
@@ -24,6 +25,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1"
   },
