--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^1.0.17",
+    "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.4",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
